opa_gatekeeper/general/automous_sa_token.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAutomountServiceAccountTokenPod
metadata:
  name: psp-automount-serviceaccount-token-pod
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector :
      matchExpressions:
        - key: type
          operator: In
          values: [ "app" ]
