opa_gatekeeper/general/block_endpoint_role.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockEndpointEditDefaultRole
metadata:
  name: block-endpoint-edit-default-role
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["ClusterRole"]
    namespaceSelector:
      matchExpressions:
        - key: type
          operator: In
          values: [ "app" ]
