opa_gatekeeper/general/required_labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-owner
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment"]
    namespaceSelector:
      matchExpressions:
        - key: type
          operator: In
          values: [ "app" ]
  parameters:
    message: "All Deployment must have an `owner` label that points to your company username"
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+"
